# infchessKRvK

./: .gitignore  .gitmodules  CMakeLists.txt  autogen.sh  config.h.in  sys.h
src/: BlackKing.cxx  BlackKing.h  BlackToMoveData.cxx  BlackToMoveData.h  BlackToMoveData0.cxx  BlackToMoveData0.h  BlackToMoveData1.cxx  BlackToMoveData1.h  Board.cxx  Board.h  Board0.cxx  Board0.h  Board1.cxx  Board1.h  CMakeLists.txt  Classification.cxx  Classification.h  Classification0.cxx  Classification1.cxx  Color.cxx  Color.h  Data.cxx  Data.h  FEN.cxx  Graph.cxx  Graph.h  Graph0.cxx  Graph1.cxx  KingMoves.cxx  KingMoves.h  Position.cxx  Position.h  README.max_ply  Rook.cxx  Rook.h  RookMoves.cxx  RookMoves.h  Square.cxx  Square.h  Square0.cxx  (+17 more)
src/version1/: BlackToMoveData.cxx  BlackToMoveData.h  Board.cxx  Board.h  Box.h  CMakeLists.txt  Classification.cxx  Classification.h  Graph.cxx  Graph.h  Square.h  WhiteToMoveData.cxx  WhiteToMoveData.h  infchess1.cxx
src/version2/: BlackKingSquare.h  BlockIndex.cxx  BlockIndex.h  BlockSquareCompact.h  Board.cxx  Board.h  CMakeLists.txt  Classification.cxx  Classification.h  Color.cxx  Color.h  Graph.cxx  Graph.h  Info.cxx  Info.h  KingSquare.cxx  KingSquare.h  Partition.h  PartitionElement.h  README  Size.h  Square.cxx  Square.h  SquareCompact.h  Uncompressed.h  WhiteKingSquare.h  WhiteRookSquare.h  compare.cxx  coordinates.h  infchess2.cxx  mmap_server.cxx  play.cxx  uint_type.h
src/version2/GUI/: CMakeLists.txt  ChessApplication.cxx  ChessApplication.h  ChessIconFactory.cxx  ChessIconFactory.h  ChessMenuBar.cxx  ChessMenuBar.h  ChessWindow.cxx  ChessWindow.h
src/version2/GUI/qtcreator01/: CMakeLists.txt  ChessWindow.ui  ChessWindowBase.cxx  ChessWindowBase.h  main.cpp
